--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "tanishq dhote",
   "license": "ISC",
   "dependencies": {
-    "node-media-server": "^2.7.0"
+    "dotenv": "^16.4.5",
+    "node-media-server": "^2.6.6"
   }
 }
