--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,7 +31,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: ^5.1.0
-  circular_bottom_navigation: ^2.4.0
+  camera: ^0.11.0+2
+  permission_handler: ^11.3.1
+  http: ^1.2.2
+  flutter_secure_storage: ^9.2.2
+  mobile_scanner: ^5.2.3
+  qr_code_tools: ^0.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
