--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,7 +36,11 @@ dependencies:
   http: ^1.2.2
   flutter_secure_storage: ^9.2.2
   mobile_scanner: ^5.2.3
-  qr_code_tools: ^0.1.0
+  path_provider: ^2.1.4
+  zxing2: ^0.2.3
+  image: ^4.2.0
+  qr_flutter: ^4.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
