--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,11 @@
   "author": "tanishq dhote",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "node-media-server": "^2.6.6"
+    "jsonwebtoken": "^9.0.2",
+    "node-media-server": "^2.6.6",
+    "pg": "^8.13.0"
   }
 }
