--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^1.2.2
   flutter_secure_storage: ^9.2.2
+  animated_custom_dropdown: ^3.1.1
   mobile_scanner: ^5.2.3
   path_provider: ^2.1.4
   zxing2: ^0.2.3
@@ -69,10 +70,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+     - images/icon.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
